--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcsh 'Women -- Biography'
 - !lcsh 'Crusades -- Biography'
 - !lcc 'D'
+- GITenberg
 tableOfContents: Adela of Blois -- Eleanor of Aquitaine -- Berengaria of Navarre --
   Isabella of Angouleme -- Violante of Jerusalem -- Eleanora of Castile -- First Crusade,
   A.D. 1090 -- Second Crusade, A.D. 1147 -- Third Crusade, A.D. 1187 -- Fourth Crusade,
